--- a/public/index.html
+++ b/public/index.html
@@ -2,60 +2,112 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>图片剪切上传</title>
+	<title>图片剪切</title>
 	<style>
 		*{
-			margin:0;
 			padding:0;
+			margin:0;
 		}
 		body{
 			padding: 100px;
 		}
-		#upload{
-			width: 60px;
-			height: 24px;
+		.img-content{
+			width: 533px;
+			height: 300px;
+			font-size: 0;
+			position: relative;
 		}
-		.content{
-			margin:10px;
-			border: 1px solid #999999;
-			width: 400px;
+		.img-content img{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 533px;
 			height: 300px;
 		}
-		.content img{
-			width: 100%;
+		#img1{
+			opacity: 0.5;
+		}
+		#img2{
+			clip: rect(0px, 100px, 100px, 0px);
+		}
+		.selectArea{
+			position: absolute;
+			top: -1px;
+			left: -1px;
+			width: 100px;
+			height: 100px;
+			border:1px solid #999999;
+		}
+		.selectArea span{
+			display: block;
+			width: 4px;
+			height: 4px;
+			background-color: #999999;
+			position: absolute;
+		}
+		.selectArea .left-top{
+			top: -2px;
+			left: -2px;
+			cursor: nw-resize;
+		}
+		.selectArea .top{
+			top: -2px;
+			left: 50%;
+			margin-left: -2px;
+			cursor: n-resize;
+		}
+		.selectArea .right-top{
+			top: -2px;
+			right: -2px;
+			cursor: ne-resize;
+		}
+		.selectArea .left{
+			top: 50%;
+			margin-top: -2px;
+			left: -2px;
+			cursor: w-resize;
+		}
+		.selectArea .right{
+			top: 50%;
+			margin-top: -2px;
+			right: -2px;
+			cursor: e-resize;
+		}
+		.selectArea .left-bottom{
+			left: -2px;
+			bottom: -2px;
+			cursor: sw-resize;
+		}
+		.selectArea .bottom{
+			left: 50%;
+			margin-left: -2px;
+			bottom: -2px;
+			cursor: s-resize;
+		}
+		.selectArea .right-bottom{
+			right: -2px;
+			bottom: -2px;
+			cursor: se-resize;
 		}
 	</style>
 </head>
 <body>
-	<div>
-		<input type="file" id="file">
-		<button id="upload">上传</button>
-	</div>
-	<div class="content">
-		<img class="img" src="" alt="">
-		<img class="img" src="" alt="">
+	<div class="img-content">
+		<img id="img1" src="img/1.jpg" alt="">
+		<img id="img2" src="img/1.jpg" alt="">
+		<div class="selectArea">
+			<span class="left-top"></span>
+			<span class="top"></span>
+			<span class="right-top"></span>
+			<span class="left"></span>
+			<span class="right"></span>
+			<span class="left-bottom"></span>
+			<span class="bottom"></span>
+			<span class="right-bottom"></span>
+		</div>
 	</div>
 
-	<script>
-		var fileElement = document.querySelector("#file");
-		var img = document.querySelector(".img");
-		/*--------选取图片---------*/
-		fileElement.onchange = function(){
-			var file = fileElement.files[0];
-			getDataUrl(file);
-		};
-		
-		/*------将选取的图片转换成dataurl--------*/
-		function getDataUrl(file){
-			var reader = new FileReader();
-			reader.onload = function(){
-				img.src = reader.result;
-				/*-------获取图片的高度-------*/
-				console.log(img.width);
-			};
-			reader.readAsDataURL(file);
-		};
-
-	</script>
+	<script src="js/getPosition.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
