--- a/public/index.html
+++ b/public/index.html
@@ -2,112 +2,25 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>图片剪切</title>
-	<style>
-		*{
-			padding:0;
-			margin:0;
-		}
-		body{
-			padding: 100px;
-		}
-		.img-content{
-			width: 533px;
-			height: 300px;
-			font-size: 0;
-			position: relative;
-		}
-		.img-content img{
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 533px;
-			height: 300px;
-		}
-		#img1{
-			opacity: 0.5;
-		}
-		#img2{
-			clip: rect(0px, 100px, 100px, 0px);
-		}
-		.selectArea{
-			position: absolute;
-			top: -1px;
-			left: -1px;
-			width: 100px;
-			height: 100px;
-			border:1px solid #999999;
-		}
-		.selectArea span{
-			display: block;
-			width: 4px;
-			height: 4px;
-			background-color: #999999;
-			position: absolute;
-		}
-		.selectArea .left-top{
-			top: -2px;
-			left: -2px;
-			cursor: nw-resize;
-		}
-		.selectArea .top{
-			top: -2px;
-			left: 50%;
-			margin-left: -2px;
-			cursor: n-resize;
-		}
-		.selectArea .right-top{
-			top: -2px;
-			right: -2px;
-			cursor: ne-resize;
-		}
-		.selectArea .left{
-			top: 50%;
-			margin-top: -2px;
-			left: -2px;
-			cursor: w-resize;
-		}
-		.selectArea .right{
-			top: 50%;
-			margin-top: -2px;
-			right: -2px;
-			cursor: e-resize;
-		}
-		.selectArea .left-bottom{
-			left: -2px;
-			bottom: -2px;
-			cursor: sw-resize;
-		}
-		.selectArea .bottom{
-			left: 50%;
-			margin-left: -2px;
-			bottom: -2px;
-			cursor: s-resize;
-		}
-		.selectArea .right-bottom{
-			right: -2px;
-			bottom: -2px;
-			cursor: se-resize;
-		}
-	</style>
+	<title>图片裁剪上传</title>
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div class="img-content">
-		<img id="img1" src="img/1.jpg" alt="">
-		<img id="img2" src="img/1.jpg" alt="">
+	<div class="content">
+		<img class="bottomImg" src="img/1.jpg" alt="">
+		<img class="topImg" src="img/1.jpg" alt="">
 		<div class="selectArea">
-			<span class="left-top"></span>
+			<span class="top-left"></span>
 			<span class="top"></span>
-			<span class="right-top"></span>
+			<span class="top-right"></span>
 			<span class="left"></span>
 			<span class="right"></span>
-			<span class="left-bottom"></span>
+			<span class="bottom-left"></span>
 			<span class="bottom"></span>
-			<span class="right-bottom"></span>
+			<span class="bottom-right"></span>
 		</div>
 	</div>
 
-	<script src="js/getPosition.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
