提交拖动相关代码

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<div class="content">
-		<img class="bottomImg" src="img/1.jpg" alt="">
-		<img class="topImg" src="img/1.jpg" alt="">
+		<img class="bottomImg" draggable="false" src="img/1.jpg" alt="">
+		<img class="topImg" draggable="false" src="img/1.jpg" alt="">
 		<div class="selectArea">
 			<span class="top-left"></span>
 			<span class="top"></span>
@@ -20,7 +20,7 @@
 			<span class="bottom-right"></span>
 		</div>
 	</div>
-
+	<script src="js/getPosition.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
